<resources>
    <string name="app_name">Minecraft Server Launcher</string>
    <string name="title_home">Home</string>
    <string name="title_properties">Properties</string>
    <string name="title_console">Console</string>
    <string name="scan_barcode">Scan Barcode</string>

    <string name="scan_qr_button_description">Scan MSL QR code</string>
    <string name="missing_camera_permission_message">Camera permission is required</string>
    <string name="scan_qr_code_prompt">Scan QR code</string>
    <string name="failed_to_read_qr_code">Failed to read QR code</string>
    <string name="connecting_to_server">Connecting to MSL…</string>
    <string name="status_connecting">Connecting</string>
    <string name="status_connected">Connected</string>
    <string name="status_not_connected">Not connected</string>
    <string name="home_info_not_connected">Unable to connect to Minecraft Server Launcher</string>
    <string name="read_qr_button_description_short">Scan QR Code</string>
    <string name="retry">Retry</string>
    <string name="server_not_running">No server is running</string>
    <string name="version_icon_description">Server version</string>
    <string name="player_count_description">Player count</string>
    <string name="difficulty">Difficulty</string>
    <string name="gamemode">Gamemode</string>
    <string name="slotsNumber">Slots</string>
    <string name="whitelist">Whitelist</string>
    <string name="pvp">PvP</string>
    <string name="command_blocks">Command Blocks</string>
    <string name="allow_flight">Allow Flight</string>
    <string name="spawn_animals">Spawn Animals</string>
    <string name="spawn_monsters">Spawn Monsters</string>
    <string name="spawn_npcs">Spawn NPCs</string>
    <string name="allow_nether">Allow Nether</string>
    <string name="force_gamemode">Force Gamemode</string>
    <string name="spawn_protection">Spawn Protection</string>
    <string name="start_server_button_text">Start Server</string>
    <string name="stop_server_button_text">Stop Server</string>
    <string name="view_distance">View Distance</string>
    <string name="hardcore">Hardcore</string>
    <string name="hide_online_players">Hide online players</string>
    <string name="motd">Motd</string>
    <string name="online_mode">Online Mode</string>
    <string name="simulation_distance">Simulation Distance</string>

    <string-array name="difficulities">
        <item>Peaceful</item>
        <item>Easy</item>
        <item>Normal</item>
        <item>Hard</item>
    </string-array>
    <string-array name="gamemodes">
        <item>Survival</item>
        <item>Creative</item>
        <item>Adventure</item>
        <item>Spectator</item>
    </string-array>

</resources>