<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="minecraft.server.launcher.remote.control.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_properties"
        android:name="minecraft.server.launcher.remote.control.ui.properties.PropertiesFragment"
        android:label="@string/title_properties"
        tools:layout="@layout/fragment_properties" />

    <fragment
        android:id="@+id/navigation_console"
        android:name="minecraft.server.launcher.remote.control.ui.console.ConsoleFragment"
        android:label="@string/title_console"
        tools:layout="@layout/fragment_console" />
</navigation>